# Job-Hunter

./: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DIRECTORY_STRUCTURE.md  Makefile  PROFILE_MATCH.md  README.md  SCORING_RULES.md  TASKS.md  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_feedback.py  routes_jobs.py  routes_raw_jobs.py  routes_sources.py
backend/app/core/: config.py  db.py  logging.py
backend/app/models/: __init__.py  evaluation.py  feedback.py  job.py  raw_job.py  source.py
backend/app/repositories/: evaluations.py  feedback.py  jobs.py  raw_jobs.py
backend/app/schemas/: evaluation.py  feedback.py  job.py  raw_job.py
backend/app/services/connectors/: amazon.py  apify_linkedin.py  apple.py  ashby.py  base.py  google.py  greenhouse.py  jobright.py  lever.py  meta.py  microsoft.py  smartrecruiters.py  workday.py  workday_csrf.py
backend/app/services/ingestion/: dedup.py  ingest.py  normalize.py
backend/app/services/scoring/: prefilter.py  scorer.py
backend/app/workers/: archive_old_jobs.py  run_ingestion.py  run_scoring.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/tests/: conftest.py  test_api.py  test_connectors.py  test_dedup.py  test_normalize.py
frontend/: index.html
scripts/: batch10_results.json  batch1_results.json  batch2_results.json  batch3_results.json  batch4_results.json  batch5_results.json  batch6_results.json  batch7_results.json  batch7b_results.json  batch8_results.json  (+16 more)
